Wake up our condition variable if we finish within three seconds, which would otherwise hold up emission of finished()

BUG:294366
FIXED-IN:4.6.1